[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gee-polarcaps"
version = "0.1.0"
description = "Polar ice-cap monitoring and glacier calving-front time-lapse from Sentinel-1 SAR via Microsoft Planetary Computer"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "David Bekaert"},
]

dependencies = [
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    "odc-stac>=0.3",
    "xarray>=2023.1",
    "rioxarray>=0.14",
    "dask>=2023.1",
    "distributed>=2023.1",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "cartopy>=0.22",
    "Pillow>=10.0",
    "scipy>=1.11",
    "rasterio>=1.3",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
]

[project.scripts]
polar-ice-change = "polar_ice_change:main"
animate-polar-weekly = "animate_polar_weekly:main"
calving-sites = "calving_sites:main"
